     add modrule 'allowHoverUnitStrafing'; allows hovercraft to slide in turns
     ground units cannot change speed or direction in mid-air
 - in god-mode, units can now be selected and commanded by any player even when not spectating (#3412)
 - fix multiple build-started sounds being played when ordering single builder to construct something

Rendering:
 - speedup minimap icon rendering
 - fix a few OpenGL errors reported by MESA drivers
 - fix SimpleParticleSystem directional particles disappearing (#1665)
 - ROAM: resize pool when running out of nodes fixes rendering on maps like Knockout
 - disable occlusion query in BumpWater it doesn't work and just makes it slower
 - move `lastFrameTime` calculation from the end of a drawframe to the beginning this way vsync locktimes are counted to the previous frame time
 ! removal of DepthBufferBits & StencilBufferBits
 - BumpWater renders now with shadowmap & infotex
 - clamp map ShadowDensity 0..1 (fixes shadow distortions on maps like Iamma)
 - use VBOs for S3O and OBJ model piece geometry
 - fix grass shadow rendering (no self-shadowing yet)
 ! changed `usable` range of GrassDetail configtag, so you can set it now >10 to increase viewrange w/o getting Tribble plushies

Sim Bugfixes:
 ! stop buildframe decaying on reclaiming
 - fix unload commands close to map edges are ignored (3175)
 - fix nukes (3269)
 - fix some issues with bombers (3253)
 - fix MANUALFIRE hangs despite no target lock
 - fix gunship jumping on takeoff (3526)
 - make sure unsupported build orders are never given to new factory buildees (3257)
 - fix aircraft failing to land properly on repair pads (3260)
 - fix gunships jittering when stunned (3262)
 - fix builders 'ignoring' wait-orders when reclaiming
 ! fix units failing ground-attack orders when their "main" weapon != weapons[0] (3276)
    logic change: MobileCAI::ExecuteAttack now cycles through all weapons until
    it finds one which can execute the order, and no longer depends on weapon[0]